test/Fail/Issue7533.err
Issue7533.agda:18.5-12: error: [UnequalTerms]
Set !=< X → F A
when checking that the expression F Empty has type X → F A
